--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poste.io Server</title>
+    <title>Hyperselling Mail</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link zur CSS-Datei für Design -->
 </head>
+
 <body>
-    <h1>Willkommen auf meiner Poste.io-Seite</h1>
-    <p>Dies ist ein Beispiel einer Webseite, die Poste.io integriert.</p>
-    <p>Mehr Infos auf: <a href="https://poste.io" target="_blank">Poste.io</a></p>
+    <header>
+        <h1>Hyperselling Mail</h1>
+        <p>Effizienter E-Mail-Service für dein Business</p>
+    </header>
+
+    <section id="features">
+        <h2>Funktionen</h2>
+        <ul>
+            <li>Einfacher E-Mail-Server</li>
+            <li>Hohe Sicherheit und Datenschutz</li>
+            <li>Automatische Spam-Filter</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Kontakt</h2>
+        <p>Schreib uns eine Nachricht:</p>
+        <form action="mailto:deine-email@deinedomain.com" method="post" enctype="text/plain">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
+            
+            <label for="email">E-Mail:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+
+            <label for="message">Nachricht:</label><br>
+            <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+
+            <input type="submit" value="Absenden">
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Hyperselling Mail - Alle Rechte vorbehalten</p>
+    </footer>
 </body>
+
 </html>
